--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,6 +20,7 @@ decorator==5.1.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
 executing==1.2.0
 fonttools==4.42.0
+flask
 gensim==4.3.1
 idna==3.4
 ipykernel==6.25.1
