--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,7 +11,7 @@ chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.6
 comm==0.1.4
-confection==0.1.1
+confection==0.1.1`
 contourpy==1.1.0
 cycler==0.11.0
 cymem==2.0.7
