--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,8 +1,17 @@
-# Server Dockerfile
-FROM python:3.8
-WORKDIR /app
-COPY . /app
-RUN pip install -r requirements.txt
-EXPOSE 5001
-CMD ["python", "app.py"]
-RUN pip install -r requirements.txt
+# Use an official Python runtime as a parent image
+FROM python:3.8-slim-buster
+
+# Set the working directory in the container
+WORKDIR /server
+
+# Copy the current directory contents into the container at /app
+COPY . /server
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Define environment variable
+ENV NAME World
+
+# Run app.py when the container launches
+CMD ["python3", "python/app.py", "--localhost:3000"]
