--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "papaparse": "^5.4.1"
   }
 }
