--- a/client/dockerfile
+++ b/client/dockerfile
@@ -13,6 +13,7 @@
 FROM python:3.11-slim-buster AS builder
 WORKDIR /server
 COPY . /server
+RUN apt-get update && apt-get install -y gcc python3-dev
 RUN pip install -r requirements.txt
 
 # Second stage: Nginx
