Fix navbar layout and update cache control

--- a/client/dockerfile
+++ b/client/dockerfile
@@ -7,7 +7,7 @@
 # CMD ["npm", "start"]
 
 # FROM nginx:alpine
-# COPY . /usr/share/nginx/html
+# COPY . /usr/share/nginx/htmle
 
 # First stage: Python
 FROM python:3.11-slim-buster AS builder
